--- a/contact-us.html
+++ b/contact-us.html
@@ -127,7 +127,7 @@
             <!-- <div class="row"> -->
                 <div class="" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800">
                     <div class="title mb-0">
-                        <h1 class="title-primary mb-0">Contact Details</h1>
+                        <h1 class="title-orange mb-0">Contact Details</h1>
                         <!-- <h1>Contact Details</h1> -->
                     </div>
 
@@ -163,7 +163,8 @@
                     <!-- map -->
                     <div class="mr-3 col-md-12">
                         <div class="googlemaps-area embed-responsive embed-responsive-16by9 my-3 py-2 ">
-                            <iframe class="w-100 h-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3468.423629430679!2d30.39612821468372!3d-29.62043701864389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef6bc52e27f3137%3A0x6dd6d60dba158838!2s11%20Ridge%20Rd%2C%20Scottsville%2C%20Pietermaritzburg%2C%203201!5e0!3m2!1sen!2sza!4v1578755195464!5m2!1sen!2sza" width="600" height="900" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                            <!-- <iframe class="w-100 h-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3468.423629430679!2d30.39612821468372!3d-29.62043701864389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef6bc52e27f3137%3A0x6dd6d60dba158838!2s11%20Ridge%20Rd%2C%20Scottsville%2C%20Pietermaritzburg%2C%203201!5e0!3m2!1sen!2sza!4v1578755195464!5m2!1sen!2sza" width="600" height="900" frameborder="0" style="border:0;" allowfullscreen=""></iframe> -->
+                            <iframe class="w-100 h-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3461.4149448849853!2d30.92735031469012!3d-29.82344232799195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef7004d700a6c11%3A0x2591e6e868da4186!2s24%20David%20Mclean%20Dr%2C%20Dawncrest%2C%20Westville%2C%203629!5e0!3m2!1sen!2sza!4v1580219789899!5m2!1sen!2sza" width="600" height="900" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                         </div>
                     </div>
                     
