--- a/contact-us.html
+++ b/contact-us.html
@@ -79,9 +79,11 @@
 
                 <!-- navbar toggler on small screens -->
                 <div class="group d-flex align-items-center">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+                    <button class="navbar-toggler bg-primary" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon text-primary"></span>
                     </button>
                 </div>
+
 
                 <!-- collapsable nav -->
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
