--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
                                 <!-- services list -->
                                 <div class="card" style="border-left: 0px; border-right: 0px; border-bottom: 0px;" >
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service1.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#strategy-and-operations">Strategy and Operations</a> </li>
-                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service2.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#technology-consulting">Technology Consulting</a> </li>
-                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service3.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#project-management-services">Project Management Services</a> </li>
+                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/strategy and oprations.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#strategy-and-operations">Strategy and Operations</a> </li>
+                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/technology services.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#technology-consulting">Technology Consulting</a> </li>
+                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/project management services.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#project-management-services">Project Management Services</a> </li>
                                     </ul>
                                 </div>
                             </div>
@@ -313,8 +313,8 @@
                                 <!-- services list -->
                                 <div class="card">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service1.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#infrastructure-as-a-service">Infrastructure As A Service</a> </li>
-                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service2.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#software-as-a-service">Software As A Service</a> </li>
+                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/infrastructure as a service.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#infrastructure-as-a-service">Infrastructure As A Service</a> </li>
+                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/software as a service.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#software-as-a-service">Software As A Service</a> </li>
                                     </ul>
                                 </div>
                             </div>
@@ -331,7 +331,7 @@
                                 Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
                                 <div class="card">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service4.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#push-to-talk">Push To Talk</a> </li>
+                                        <li class="list-group-item"><img width="49" height="49" class="mr-4" src="assets/images/services icons/push to talk.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#push-to-talk">Push To Talk</a> </li>
                                     </ul>
                                 </div>
                             </div>
