--- a/industries.html
+++ b/industries.html
@@ -133,7 +133,7 @@
             <div class="container">
                 <div class="row">
                     <!-- Banking Financial Services & Insurance -->
-                    <div class="col-lg-12">
+                    <div id="banking" class="col-lg-12">
                         <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
                             <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
                             <div class="media-body">
@@ -151,7 +151,7 @@
                     </div>
 
                     <!-- Retail, Consumer Packaged Goods, Transportation -->
-                    <div class="col-lg-12">
+                    <div id="retail" class="col-lg-12">
                         <div class="media" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                             <img class="mr-4" src="assets/images/service2.png" alt="Web Development">
                             <div class="media-body">
@@ -166,7 +166,7 @@
                     </div>
 
                     <!-- Government Sector -->
-                    <div class="col-lg-12">
+                    <div id="government" class="col-lg-12">
                         <div class="media" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
                             <img class="mr-4" src="assets/images/service3.png" alt="Web Development">
                             <div class="media-body">
@@ -181,7 +181,7 @@
                     </div>
 
                     <!-- Healthcare, Life Science & Services -->
-                    <div class="col-lg-12">
+                    <div id="healthcare" class="col-lg-12">
                         <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
                             <img class="mr-4" src="assets/images/service4.png" alt="Web Development">
                             <div class="media-body">
@@ -194,7 +194,7 @@
                     </div>
 
                     <!-- Energy, Natural Resources Utilities and Engineering & Construction -->
-                    <div class="col-lg-12">
+                    <div id="energy" class="col-lg-12">
                         <div class="media" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
                             <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
                             <div class="media-body">
@@ -210,7 +210,7 @@
                     </div>
 
                     <!-- Graphic Design, Printing, Corporate Branding & Advertising -->
-                    <div class="col-lg-12">
+                    <div id="graphic" class="col-lg-12">
                         <div class="media" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
                             <img class="mr-4" src="assets/images/service5.png" alt="Web Development">
                             <div class="media-body">
