added client hover colour switch

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <li class="nav-item"><a class="nav-link text-primary" href="./about.html">About Us</a></li>
 
                         <!-- test dropdown -->
-                        <li class="nav-item dropdown">
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-primary" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               test
                             </a>
@@ -99,7 +99,7 @@
                                   </ul>
                                 </li>
                             </ul>
-                        </li>
+                        </li> -->
 
                         <!-- Solutions And Services dropdown -->
                         <li class="nav-item dropdown ">
@@ -478,38 +478,38 @@
                 </div>
 
                 <!-- clients  -->
-                <div class="swiper-container clients-slider pt-2">
-                    <div class="swiper-wrapper">
+                <div class="swiper-container clients-slider pt-2" id="clients-slider">
+                    <div id="swiper-slides" class="swiper-wrapper">
 
                         <div class="swiper-slide">
-                            <a href="#"><img width="86" height="69" src="assets/images/partners/One Colour Logos/1.png" alt="Client 1"></a>
+                            <a clas="partner-link" href="#"><img id="partner-img" width="86" height="69" src="assets/images/partners/black/1.png" alt="Client 1"></a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#"><img width="200" height="100" src="assets/images/partners/One Colour Logos/2.png" alt="Client 2"></a>
+                            <a clas="partner-link" href="#"><img id="partner-img" width="200" height="100" src="assets/images/partners/black/2.png" alt="Client 2"></a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#"><img width="200" height="100" src="assets/images/partners/One Colour Logos/3.png" alt="Client 3"></a>
+                            <a clas="partner-link" href="#"><img id="partner-img" width="200" height="100" src="assets/images/partners/black/3.png" alt="Client 3"></a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#"><img width="200" height="100" src="assets/images/partners/One Colour Logos/4.png" alt="Client 4"></a>
+                            <a clas="partner-link" href="#"><img id="partner-img" data-img-type="partner" width="200" height="100" src="assets/images/partners/black/4.png" alt="Client 4"></a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#"><img width="200" height="100" src="assets/images/partners/One Colour Logos/5.png" alt="Client 5"></a>
+                            <a clas="partner-link" href="#"><img id="partner-img" width="200" height="100" src="assets/images/partners/black/5.png" alt="Client 5"></a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#"><img width="200" height="100" src="assets/images/partners/One Colour Logos/6.png" alt="Client 5"></a>
+                            <a clas="partner-link" href="#"><img id="partner-img" width="200" height="100" src="assets/images/partners/black/6.png" alt="Client 5"></a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#"><img width="200" height="100" src="assets/images/partners/One Colour Logos/7.png" alt="Client 5"></a>
+                            <a clas="partner-link" href="#"><img id="partner-img" width="200" height="100" src="assets/images/partners/black/7.png" alt="Client 5"></a>
                         </div>                        
                         <div class="swiper-slide">
-                            <a href="#"><img width="200" height="100" src="assets/images/partners/One Colour Logos/8.png" alt="Client 5"></a>
+                            <a clas="partner-link" href="#"><img id="partner-img" width="200" height="100" src="assets/images/partners/black/8.png" alt="Client 5"></a>
                         </div>                        
                         <div class="swiper-slide">
-                            <a href="#"><img width="200" height="100" src="assets/images/partners/One Colour Logos/9.png" alt="Client 5"></a>
+                            <a clas="partner-link" href="#"><img id="partner-img" width="200" height="100" src="assets/images/partners/black/9.png" alt="Client 5"></a>
                         </div>                        
                         <div class="swiper-slide">
-                            <a href="#"><img width="200" height="100" src="assets/images/partners/One Colour Logos/10.png" alt="Client 5"></a>
+                            <a clas="partner-link" href="#"><img id="partner-img" width="200" height="100" src="assets/images/partners/black/10.png" alt="Client 5"></a>
                         </div>
                     </div>
                     <div class="test-pagination"></div>
@@ -662,6 +662,7 @@
     <!--Template Script-->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script src="assets/js/partners.js"></script>
 </body>
 
 </html>
