added scroll to top

--- a/index.html
+++ b/index.html
@@ -520,6 +520,12 @@
     </section>
     <!-- Testimonial and Clients End -->
 
+    <!-- scroll to top start -->
+    <a id="back-to-top" href="#" class="btn1 1btn-secondary 1btn-lg back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left">
+        <i class=" fa fa-4x fas fa-chevron-circle-up text-primary"></i>
+    </a>
+    <!-- scroll to top end -->
+
     <!-- Footer Start -->
     <footer>
         <!-- Widgets Start -->
