--- a/contact-us.html
+++ b/contact-us.html
@@ -178,7 +178,7 @@
     <!-- Trust End -->
 
     <!-- Footer Start -->
-    <footer>
+    <footer class="strip">
         <!-- Widgets Start -->
         <div class="footer-widgets py-5">
             <div class="container">
