--- a/industries.html
+++ b/industries.html
@@ -232,7 +232,7 @@
     <!-- Industry Services End -->
     
     <!-- Footer Start -->
-    <footer>
+    <footer class="strip">
         <!-- Widgets Start -->
         <div class="footer-widgets py-5">
             <div class="container">
@@ -258,16 +258,7 @@
                             <h5>Services</h5>
                             <ul class="list-group bg-secondary" style="background-color: #FF9D00;" >
                                 <li class="list-group-item pb-0 pl-2" style="background-color: #FF9D00; border: none;"><h5 class="mb-0"> <a class="text-white" href="products-services.html#consulting">Consulting</a class="text-white"> </h5></li>
-                                    <!-- <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Strategy and Operations</a></li>
-                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Technology Consulting</a></li>
-                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Project Management Services</a></li> -->
                                 <li class="list-group-item pb-0 pl-2" style="background-color: #FF9D00; border: none;"><h5 class="mb-0"> <a class="text-white" href="products-services.html#digital-solutions">Digital Solutions</a> </h5></li>
-                                    <!-- <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Customer Relationship Management</a></li>
-                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Electronic Content Management</a></li>
-                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Real Estate Management System</a></li>
-                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Custom Application Development</a></li>
-                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Project Portfolio Management</a></li>
-                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Web and Mobile Apllications</a></li> -->
                                 <li class="list-group-item pb-0 pl-2" style="background-color: #FF9D00; border: none;"><h5 class="mb-0"> <a class="text-white" href="products-services.html#cloud-and-services">Cloud Services</a> </h5></li>
                                 <li class="list-group-item pb-0 pl-2" style="background-color: #FF9D00; border: none;"><h5 class="mb-0"> <a class="text-white" href="products-services.html#devices">Devices</a> </h5></li>
 
